add new pages and nav menu to the index page. Also create a thank you resonse page for the feedback.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../docs/styles.css">
     <title>Ponte Vecchio</title>
+    <nav>
+        <ul id="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="food.html">Food Menu</a></li>
+            <li><a href="drinks.html">Drinks Menu</a></li>
+            <li><a href="feedback.html">Feedback</a></li>
+        </ul>
+    </nav>
 </head>
 <body>
     <header>
