format index.html in a more organised way and fix the order/location of the nav menu and header code

--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/styles.css">
+
+    <!--Title-->
     <title>Ponte Vecchio</title>
-    <nav>
-        <ul id="menu">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="food.html">Food Menu</a></li>
-            <li><a href="drinks.html">Drinks Menu</a></li>
-            <li><a href="feedback.html">Feedback</a></li>
-        </ul>
-    </nav>
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body>
     <header>
         <h1>Welcome to Ponte Vecchio!</h1>
+        <nav>
+            <ul id="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="food.html">Food Menu</a></li>
+                <li><a href="drinks.html">Drinks Menu</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
+            </ul>
+        </nav>
+
     </header>
-    <section id="food"><h2>Food Intro Section</h2>
+    <section id="food">
+        <h2>Food Intro Section</h2>
     </section>
     <section id="drinks">
         <h2>Drinks Intro Section</h2>
@@ -27,4 +34,5 @@
     <footer>
     </footer>
 </body>
+
 </html>
