fix the incorrect html code for linking each page in the nev menu

--- a/food.html
+++ b/food.html
@@ -12,19 +12,16 @@
         <menu>
             <ul>
                 <li>
-                    <link rel="stylesheet" href="index.html">Home
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <link rel="stylesheet" href="food.html">Food
+                    <a href="food.html">Food</a>
                 </li>
                 <li>
-                    <link rel="stylesheet" href="drinks.html">Drinks
+                    <a href="drinks.html">Drinks</a>
                 </li>
                 <li>
-                    <link rel="stylesheet" href="feedback.html">Feedback
-                </li>
-                <li>
-                    <link rel="stylesheet" href="">
+                    <a href="feedback.html">Feedback</a>
                 </li>
             </ul>
         </menu>
