add image to header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h1>Welcome to Ponte Vecchio!</h1>
+        <h1 id="welcome">Welcome to Ponte Vecchio!</h1>
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
