add image and styling to header

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/faviconns/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/faviconns/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/faviconns/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <!--Title-->
     <title>Ponte Vecchio</title>
@@ -26,7 +26,12 @@
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
-
+        <section id="hero">
+            <div id="hero-text">
+                <h2>Welcome to Ponte Vecchio</h2>
+                <h3>Bar, Bistro and Deli</h3>
+            </div>
+        </section>
     </header>
     <section id="food">
         <h2>Food Intro Section</h2>
