--- a/index.html
+++ b/index.html
@@ -34,17 +34,16 @@
         </section>
     </header>
     <section id="food">
-        <h2>Food Intro Section</h2>
         <img src="" alt="">
-        <h4>Welcome to Ponte Vecchio Bistro and Bar in Killaloe</h4>
-        <p> Ponte Vecchio Bistro and Bar, we take pride in offering a 
+        <h2>Welcome to Ponte Vecchio Bistro and Bar in Killaloe</h2>
+        <p> At Ponte Vecchio, we take pride in offering a 
             delightful culinary experience that combines the best of traditional
             and contemporary cuisine. Nestled in the picturesque town of Killaloe, 
             our bistro is a haven for food enthusiasts looking to indulge in a 
-            variety of delectable dishes.
-        </p><br>
+            variety of delectable dishes, fine wines and rich coffee.
+        </p>
 
-            <h4>Savor the Flavors of Italy</h4>
+            <h3>Savor the Flavors of Italy</h3>
             <p>Step into a world of authentic Italian flavors with our meticulously 
                 crafted menu. From classic sour-dough pizzas topped with fresh, 
                 locally-sourced ingredients, delectable bruschetta to hearty mouth-watering soups erverd with fresh italian bread,
