add pizza image to homepage and create base drinks page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </section>
     </header>
     <section id="food">
-        <img src="" alt="">
+        <img id="food-home" src="assets/images/pizza1.webp" alt="Sour dough pepperoni pizza on chopping board">
         <h2>Welcome to Ponte Vecchio Bistro and Bar in Killaloe</h2>
         <p> At Ponte Vecchio, we take pride in offering a 
             delightful culinary experience that combines the best of traditional
