add more styling and rearrange the image and title on the homepage

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
             </div>
         </section>
     </header>
-    <section id="food">
-        <img id="food-home" src="assets/images/pizza1.webp" alt="Sour dough pepperoni pizza on chopping board">
+    <section id="welcome">
+        <div id="food"></div>
         <h2>Welcome to Ponte Vecchio Bistro and Bar in Killaloe</h2>
+        <img id="food-home" src="assets/images/pizza1.webp" alt="Sour dough pepperoni pizza on chopping board">
         <p> At Ponte Vecchio, we take pride in offering a 
             delightful culinary experience that combines the best of traditional
             and contemporary cuisine. Nestled in the picturesque town of Killaloe, 
