fix css code and align image and text

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 
 <body>
     <header>
-        <h1 id="welcome">Welcome to Ponte Vecchio!</h1>
-        <nav>
-            <ul id="menu">
+        <nav class="navbar">
+            <ul class="nav-menu" id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="food.html">Food Menu</a></li>
                 <li><a href="drinks.html">Drinks Menu</a></li>
@@ -34,23 +33,27 @@
         </section>
     </header>
     <section id="welcome">
-        <div id="food"></div>
-        <h2>Welcome to Ponte Vecchio Bistro and Bar in Killaloe</h2>
-        <img id="food-home" src="assets/images/pizza1.webp" alt="Sour dough pepperoni pizza on chopping board">
-        <p> At Ponte Vecchio, we take pride in offering a 
-            delightful culinary experience that combines the best of traditional
-            and contemporary cuisine. Nestled in the picturesque town of Killaloe, 
-            our bistro is a haven for food enthusiasts looking to indulge in a 
-            variety of delectable dishes, fine wines and rich coffee.
-        </p>
+
+        <h2 id="">Welcome to Ponte Vecchio Bistro and Bar in Killaloe</h2>
+        <div id="food">
+            <p> At Ponte Vecchio, we take pride in offering a
+                delightful culinary experience that combines the best of traditional
+                and contemporary cuisine. Nestled in the picturesque town of Killaloe,
+                our bistro is a haven for food enthusiasts looking to indulge in a
+                variety of delectable dishes, fine wines and rich coffee.
+            </p>
+            <img id="food-home-img" src="assets/images/pizza1.webp" alt="Sour dough pepperoni pizza on chopping board">
+
 
             <h3>Savor the Flavors of Italy</h3>
-            <p>Step into a world of authentic Italian flavors with our meticulously 
-                crafted menu. From classic sour-dough pizzas topped with fresh, 
-                locally-sourced ingredients, delectable bruschetta to hearty mouth-watering soups erverd with fresh italian bread,
+            <p>Step into a world of authentic Italian flavors with our meticulously
+                crafted menu. From classic sour-dough pizzas topped with fresh,
+                locally-sourced ingredients, delectable bruschetta to hearty mouth-watering soups erverd with fresh
+                italian bread,
                 every bite promises to transport you to the heart of Italy.</p>
-        </p>
-        </section>
+            </p>
+        </div>
+    </section>
     <section id="drinks">
         <h2>Drinks Intro Section</h2>
     </section>
