fix all layout and styling issues

--- a/index.html
+++ b/index.html
@@ -59,7 +59,36 @@
     </section>
     <section id="books"> Books Intro Section</section>
     <footer>
+        <ul id="social-networks">
+            <li>
+                <a href="http://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our facebook page (opens in  a new tab)">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a href="http://www.twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-x-twitter">
+                    </i>
+                </a>
+            </li>
+            <li>
+                <a href="http://www.youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our youtube page (opens in new tab)">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
+            </li>
+            <li>
+                <a href="http://www.instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our instagram channel (opens in new tab)">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
+        </ul>
     </footer>
+    
+    <script src="https://kit.fontawesome.com/9906bd50db.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
