add back lost code from previous commit

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/faviconns/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/faviconns/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/faviconns/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <!--Title-->
     <title>Ponte Vecchio</title>
@@ -17,27 +17,78 @@
 
 <body>
     <header>
-        <h1>Welcome to Ponte Vecchio!</h1>
-        <nav>
-            <ul id="menu">
+        <nav class="navbar">
+            <ul class="nav-menu" id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="food.html">Food Menu</a></li>
                 <li><a href="drinks.html">Drinks Menu</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
-
+        <section id="hero">
+            <div id="hero-text">
+                <h2>Welcome to Ponte Vecchio</h2>
+                <h3>Bar, Bistro and Deli</h3>
+            </div>
+        </section>
     </header>
-    section>div#hero>h2>h3
-    <section id="food">
-        <h2>Food Intro Section</h2>
+    <section id="welcome">
+
+        <h2 id="">Welcome to Ponte Vecchio Bistro and Bar in Killaloe</h2>
+        <div id="food">
+            <p> At Ponte Vecchio, we take pride in offering a
+                delightful culinary experience that combines the best of traditional
+                and contemporary cuisine. Nestled in the picturesque town of Killaloe,
+                our bistro is a haven for food enthusiasts looking to indulge in a
+                variety of delectable dishes, fine wines and rich coffee.
+            </p>
+            <img id="food-home-img" src="assets/images/pizza1.webp" alt="Sour dough pepperoni pizza on chopping board">
+
+
+            <h3>Savor the Flavors of Italy</h3>
+            <p>Step into a world of authentic Italian flavors with our meticulously
+                crafted menu. From classic sour-dough pizzas topped with fresh,
+                locally-sourced ingredients, delectable bruschetta to hearty mouth-watering soups erverd with fresh
+                italian bread,
+                every bite promises to transport you to the heart of Italy.</p>
+            </p>
+        </div>
     </section>
     <section id="drinks">
         <h2>Drinks Intro Section</h2>
     </section>
     <section id="books"> Books Intro Section</section>
     <footer>
+        <ul id="social-networks">
+            <li>
+                <a href="http://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our facebook page (opens in  a new tab)">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a href="http://www.twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-x-twitter">
+                    </i>
+                </a>
+            </li>
+            <li>
+                <a href="http://www.youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our youtube page (opens in new tab)">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
+            </li>
+            <li>
+                <a href="http://www.instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our instagram channel (opens in new tab)">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
+        </ul>
     </footer>
+    
+    <script src="https://kit.fontawesome.com/9906bd50db.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
