Remove  social media links that are not needed and remove hero text

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
             </ul>
         </nav>
         <section id="hero">
-            <div id="hero-text">
-                <h2>Welcome to Ponte Vecchio</h2>
-                <h3>Bar, Bistro and Deli</h3>
+            <div id="hero-div">
             </div>
         </section>
     </header>
@@ -61,26 +59,13 @@
     <footer>
         <ul id="social-networks">
             <li>
-                <a href="http://www.facebook.com" target="_blank" rel="noopener"
+                <a href="http://www.facebook.com/||PonteVecchioKillaloe" target="_blank" rel="noopener"
                     aria-label="Visit our facebook page (opens in  a new tab)">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
             <li>
-                <a href="http://www.twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)">
-                    <i class="fa-brands fa-x-twitter">
-                    </i>
-                </a>
-            </li>
-            <li>
-                <a href="http://www.youtube.com" target="_blank" rel="noopener"
-                    aria-label="Visit our youtube page (opens in new tab)">
-                    <i class="fa-brands fa-youtube"></i>
-                </a>
-            </li>
-            <li>
-                <a href="http://www.instagram.com" target="_blank" rel="noopener"
+                <a href="http://www.instagram.com/ponte_vecchio_killaloe" target="_blank" rel="noopener"
                     aria-label="Visit our instagram channel (opens in new tab)">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
