add hero and header to drinks page

--- a/drinks.html
+++ b/drinks.html
@@ -3,23 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="assets/css/styles.css">
     <title>Drinks Menu</title>
 </head>
 <body>
+ 
     <header>
-        <h1 id="welcome">Welcome to Ponte Vecchio!</h1>
-        <nav>
-            <ul id="menu">
+        <nav class="navbar">
+            <ul class="nav-menu" id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="food.html">Food Menu</a></li>
                 <li><a href="drinks.html">Drinks Menu</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
-        <section id="hero">
-            <div id="hero-text">
-                <h2>Ponte Vecchio</h2>
-                <h3>Drinks Menu</h3>
+        <section id="hero-drinks" class="drinks">
+            <div id="hero-div">
             </div>
         </section>
     </header>
