--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
-        <section id="hero">
+        <section id="hero-main" class="hero-main">
             <div id="hero-div">
             </div>
         </section>
