--- a/food.html
+++ b/food.html
@@ -4,27 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <!--Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    
     <title>Food</title>
 </head>
 <body>
-    <header>Food and Pizza</header>
-    <nav>
-        <menu>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="food.html">Food</a>
-                </li>
-                <li>
-                    <a href="drinks.html">Drinks</a>
-                </li>
-                <li>
-                    <a href="feedback.html">Feedback</a>
-                </li>
+    <header>
+        <nav class="navbar">
+            <ul class="nav-menu" id="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="food.html">Food Menu</a></li>
+                <li><a href="drinks.html">Drinks Menu</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
             </ul>
-        </menu>
-    </nav>    
+        </nav>
+    </header>
+    
 </body>
 </html>
