fix spelling mistake on index page, update books section with more appropriate title and start to populate food menu.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h3>Savor the Flavors of Italy</h3>
             <p>Step into a world of authentic Italian flavors with our meticulously
                 crafted menu. From classic sour-dough pizzas topped with fresh,
-                locally-sourced ingredients, delectable bruschetta to hearty mouth-watering soups erverd with fresh
+                locally-sourced ingredients, delectable bruschetta to hearty mouth-watering soups serverd with fresh
                 italian bread,
                 every bite promises to transport you to the heart of Italy.</p>
             </p>
@@ -55,11 +55,13 @@
     <section id="drinks">
         <h2>Drinks Intro Section</h2>
     </section>
-    <section id="books"> Books Intro Section</section>
+    <section id="books"> <h1>Books at Ponte Vecchio</h1>
+        <img src="assets/images/" alt="">
+    </section>
     <footer>
         <ul id="social-networks">
             <li>
-                <a href="http://www.facebook.com/||PonteVecchioKillaloe" target="_blank" rel="noopener"
+                <a href="http://www.facebook.com/PonteVecchioKillaloe" target="_blank" rel="noopener"
                     aria-label="Visit our facebook page (opens in  a new tab)">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
