add styling to food menu with temporary div border

--- a/food.html
+++ b/food.html
@@ -25,9 +25,10 @@
     </header>
     
     <section>
-        <div id="food-light">
-            <table>
-                <thead></thead>
+        <div id="light-menu">
+            <table id="food-light" class="small-table">
+                
+                <tbody>
                     <tr><td>Marinated Olives</td> <td>€5.00</td> </tr>
                     <tr><td>Italian Crisps</td> <td>€5.00</td></tr>
                     <tr><td>Garlic Bread</td> <td>€7.00</td></tr>
@@ -35,12 +36,13 @@
                     <tr><td class="description">Tomato based soup with cannelini beans, peas & pasta served with toasted bread.</td></tr>
                     <tr><td>Bruschetta </td><td>€9.00</td></tr>
                     <tr class="description"><td>Toasted Italian bread with olive oil, garlic, sundried tomato,rocket & parmagiano.</td></td></tr>
-            </table>
-        </div>
+                </tbody>
+                </table>
+      <!--  </div>
 
-        <div id="food-sandwiches">
-            <table>
-                <thead></thead>
+        <div > -->
+            <table id="food-sandwiches" class="small-table">
+                <tbody>
                     <tr><td>Ciabatta</td> <td>€9.00</td> </tr>
                     <tr><td>Ham Ciabatta: Proscuitto ham, mozzarella & sundried tomatoes.</td></tr>
                     <tr><td>Tuna Ciabatta</td></tr>
@@ -49,7 +51,8 @@
                     <tr class="description"><td>Artichokes, mushroom, onion, mozzarella & sundried tomatoes.</td></tr>
                     <tr><td>Pizza Ciabatta:</td></tr>
                     <tr class="description"><td>Pizza sauce, mozzarella & pepperoni (more toppings available).</td></tr>
-            </table>
+                </tbody>
+                </table>
         </div>
     </section>
 </body>
