--- a/drinks.html
+++ b/drinks.html
@@ -28,6 +28,14 @@
             </div>
         </section>
     </header>
+    <div class="container">
+        <div class="item">col1</div>
+        <div class="item">col2</div>
+        <div class="item">d1</div>
+        <div class="item">d2</div>
+        <div class="item">d3</div>
+        <div class="item">d4</div>
+    </div>
     
 </body>
 </html>
