Add drinks to menu and create a price class for ectra styling

--- a/drinks.html
+++ b/drinks.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="assets/css/styles.css">
-   <!--Favicon -->
-   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-   <link rel="manifest" href="/site.webmanifest">
-   
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <!--Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <title>Drinks Menu</title>
 </head>
+
 <body>
- 
+
     <header>
         <nav class="navbar">
             <ul class="nav-menu" id="menu">
@@ -28,14 +30,34 @@
             </div>
         </section>
     </header>
-    <div class="container">
-        <div class="item">col1</div>
-        <div class="item">col2</div>
-        <div class="item">d1</div>
-        <div class="item">d2</div>
-        <div class="item">d3</div>
-        <div class="item">d4</div>
+    <div id="hot-drinks">
+        <h1>Caffe / Coffee</h1>
+        <p>Coffee, Tea and Cakes Available from 9:30am</>
+
+        <div class="container">
+            <div class="item text-left">Espresso</div>
+            <div class="item">€3.00</div>
+            <div class="item text-left">Macchiato</div>
+            <div class="item">€3.00</div>
+            <div class="item text-left">Americano</div>
+            <div class="item">€3.00</div>
+            <div class="item text-left">Tea</div>
+            <div class="item">€3.00</div>
+            <div class="item description">Regular, Earl Gray, Green Tea, Peppermint, Black Chia, Lemon & Ginger,
+                Chamomile</div>
+            <div class="item"></div>
+            <div class="item text-left">Cappucino</div>
+            <div class="item">€3.30</div>
+            <div class="item text-left">Caffe Latte</div>
+            <div class="item">€3.30</div>
+            <div class="item text-left">Cioccolata Calda <span class="text-small">(Hot Chocolate)</span></div>
+            <div class="item">€3.30</div>
+            <div class="item text-left">Extra Shot</div>
+            <div class="item">+€1.00</div>
+            <div class="item text-left">Latte D'Avena <span class="text-small">(Oat Milk)</span></div>
+            <div class="item">+€1.00</div>
+        </div>
     </div>
-    
 </body>
+
 </html>
