--- a/food.html
+++ b/food.html
@@ -30,17 +30,17 @@
     <div class="container">
         
         <div class="item text-left">Marinated Olives</div>
-        <div class="item">€5.00</div>
+        <div class="item price">€5.00</div>
         <div class="item text-left">Italian Crisps</div>
-        <div class="item">€5.00</div>
+        <div class="item price">€5.00</div>
         <div class="item text-left">Garlic Bread</div>
-        <div class="item">€7.00</div>
+        <div class="item price">€7.00</div>
         <div class="item text-left">Minestrones Soup</div>
-        <div class="item">€8.00</div>
+        <div class="item price">€8.00</div>
         <div class="item text-left description">Tomato based soup with cannelini beans, peas & pasta served with toasted bread.</div>
         <div class="item"></div>
         <div class="item text-left">Bruschetta</div>
-        <div class="item">€9.00</div>
+        <div class="item price">€9.00</div>
         <div class="item text-left description">Toasted Italian bread with olive oil, garlic, sundried tomato, rocket & parmagiano.</div>
         <div class="item"></div>
     </div>
