change light bites table into a grid container.

--- a/food.html
+++ b/food.html
@@ -29,8 +29,7 @@
     <section id="food-menu-block">
         <div id="light-menu">
             <h1> Light Bites</h1>
-            <div class="container">
-
+            <div id= "light-bites" class="container">
                 <div class="item text-left">Marinated Olives</div>
                 <div class="item price">€5.00</div>
                 <div class="item text-left">Italian Crisps</div>
@@ -50,39 +49,28 @@
 
             </div>
 
-            <table id="food-sandwiches" class="small-table container">
-                <tbody>
-                    <tr>
-                        <td>Ciabatta</td>
-                        <td>€9.00</td>
-                    </tr>
-                    <tr>
-                        <td>Ham Ciabatta</td>
-                    </tr>
-                    <tr class="description">
-                        <td>Ham, mozzarella & sundried tomatoes.</td>
-                    </tr>
-                    <tr>
-                        <td>Tuna Ciabatta</td>
-                    </tr>
-                    <tr class="description">
-                        <td>Tuna, onion, mozzarella, & sundried tomatoes.</td>
-                    </tr>
-                    <tr>
-                        <td>Mix. Veg Ciabatta:</td>
-                    </tr>
-                    <tr class="description">
-                        <td>Artichokes, mushroom, onion, mozzarella & sundried tomatoes.</td>
-                    </tr>
-                    <tr>
-                        <td>Pizza Ciabatta:</td>
-                    </tr>
-                    <tr class="description">
-                        <td>Pizza sauce, mozzarella & pepperoni (more toppings available).</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+            <div id="food-sandwiches" class="container">
+                <div class="item text-left">Ciabatta</div>
+                <div class="item price">€9.00</div>
+                <div class="item text-left">Ham Ciabatta</div>
+                <div class="item price"></div>
+                <div class="item text-left description">Ham, mozzarella & sundried tomatoes.</div>
+                <div class="item price"></div>
+                <div class="item text-left">Tuna Ciabatta</div>
+                <div class="item price"></div>
+                <div class="item text-left description">Tuna, onion, mozzarella, & sundried tomatoes.</div>
+                <div class="item"></div>
+                <div class="item text-left">Mixed Veg Ciabatta</div>
+                <div class="item price"></div>
+                <div class="item text-left description">Artichokes, mushroom, onion, mozzarella & sundried tomatoes.
+                </div>
+                <div class="item price"></div>
+                <div class="item text-left">Pizza Ciabatta</div>
+                <div class="item price"></div>
+                <div class="item text-left description">Pizza sauce, mozzarella & pepperoni (more toppings available).
+                </div>
+                <div class="item"></div>
+            </div>
     </section>
 </body>
 
