fix placeholder text display for feedback input by removing spaces

--- a/feedback.html
+++ b/feedback.html
@@ -42,8 +42,7 @@
                     <input type="email" name="email" id="email" placeholder="Enter valid email address">
                 </div>
                 <div class="form-item" <label for="comments">Comments</label>
-                    <textarea name="comments" id="comments" rows="5" placeholder="Did you love us? We hope you did!">
-            </textarea>
+                    <textarea name="comments" id="comments" rows="5" placeholder="Did you love us? We hope you did!"></textarea>
                 </div>
                 <div>
                     <button type="submit">Submit</button>
