Fix form sstyling for more streamlined appearance

--- a/drinks.html
+++ b/drinks.html
@@ -58,6 +58,24 @@
             <div class="item">+€1.00</div>
         </div>
     </div>
+    <footer>
+        <ul id="social-networks">
+            <li>
+                <a href="http://www.facebook.com/PonteVecchioKillaloe" target="_blank" rel="noopener"
+                    aria-label="Visit our facebook page (opens in  a new tab)">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a href="http://www.instagram.com/ponte_vecchio_killaloe" target="_blank" rel="noopener"
+                    aria-label="Visit our instagram channel (opens in new tab)">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
+        </ul>
+    </footer>
+    
+    <script src="https://kit.fontawesome.com/9906bd50db.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
