--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
         </section>
     </header>
     <section id="welcome">
-
-        <h2 id="">Welcome to Ponte Vecchio Bistro and Bar in Killaloe</h2>
         <div id="food">
+            <h2 id="">Welcome to Ponte Vecchio Bistro and Bar, Killaloe</h2>
             <p> At Ponte Vecchio, we take pride in offering a
                 delightful culinary experience that combines the best of traditional
                 and contemporary cuisine. Nestled in the picturesque town of Killaloe,
@@ -55,7 +54,7 @@
     <section id="drinks">
         <h2>Drinks Intro Section</h2>
     </section>
-    <section id="books"> <h1>Books at Ponte Vecchio</h1>
+    <section id="books"> <h3>Books at Ponte Vecchio</h3>
         <img src="assets/images/" alt="">
     </section>
     <footer>
