--- a/drinks.html
+++ b/drinks.html
@@ -59,6 +59,7 @@
         </div>
     </div>
     <footer>
+        <P class="footer">Royal Parade,<br> Killaloe,<br> Co.Clare</P>
         <ul id="social-networks">
             <li>
                 <a href="http://www.facebook.com/PonteVecchioKillaloe" target="_blank" rel="noopener"
