--- a/feedback.html
+++ b/feedback.html
@@ -55,6 +55,7 @@
         
     </div>
     <footer>
+        <P class="footer">Royal Parade,<br> Killaloe,<br> Co.Clare</P>
         <ul id="social-networks">
             <li>
                 <a href="http://www.facebook.com/PonteVecchioKillaloe" target="_blank" rel="noopener"
