--- a/food.html
+++ b/food.html
@@ -73,6 +73,7 @@
             </div>
     </section>
     <footer>
+        <P class="footer">Royal Parade,<br> Killaloe,<br> Co.Clare</P>
         <ul id="social-networks">
             <li>
                 <a href="http://www.facebook.com/PonteVecchioKillaloe" target="_blank" rel="noopener"
