--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <img src="assets/images/" alt="">
     </section>
     <footer>
+        <P class="footer">Royal Parade,<br> Killaloe,<br> Co.Clare</P>
         <ul id="social-networks">
             <li>
                 <a href="http://www.facebook.com/PonteVecchioKillaloe" target="_blank" rel="noopener"
