fix css styling on nav bar and footer

--- a/feedback.html
+++ b/feedback.html
@@ -28,7 +28,7 @@
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
-    </header>
+    </header><section id="main">
     <h1>Heres what Others Have to say About Us
     </h1>
     <div id="feedback-page">
@@ -54,6 +54,7 @@
             </form>
         
     </div>
+</section>
     <footer>
         <P class="footer">Royal Parade,<br> Killaloe,<br> Co.Clare</P>
         <ul id="social-networks">
