Remodel menu code to make use of flex box and reduce number of divs.

--- a/food.html
+++ b/food.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
     </header>
-
+<!-- 
     <section id="food-menu-block">
         <div id="light-menu">
             <h1> Light Bites</h1>
@@ -71,7 +71,64 @@
                 </div>
                 <div class="item"></div>
             </div>
-    </section>
+    </section> -->
+    <section id="food-menu-block">
+        <div id="light-menu">
+          <h1>Light Bites</h1>
+          <div id="light-bites" class="container">
+            <div class="item-row">
+              <div class="text-left">Marinated Olives</div>
+              <div class="price">€5.00</div>
+            </div>
+            <div class="item-row">
+              <div class="text-left">Italian Crisps</div>
+              <div class="price">€5.00</div>
+            </div>
+            <div class="item-row">
+              <div class="text-left">Garlic Bread</div>
+              <div class="price">€7.00</div>
+            </div>
+            <div class="item-row">
+              <div class="text-left">Minestrone Soup</div>
+              <div class="price">€8.00</div>
+            </div>
+            <div class="item-row description">Tomato based soup with cannellini beans, peas & pasta served with toasted bread.</div>
+            <div class="item-row">
+              <div class="text-left">Bruschetta</div>
+              <div class="price">€9.00</div>
+            </div>
+            <div class="item-row description">Toasted Italian bread with olive oil, garlic, sundried tomato, rocket & parmagiano.</div>
+          </div>
+        </div>
+      
+        <div id="food-sandwiches" class="container">
+          <h1>Food Sandwiches</h1>
+          <div class="item-row">
+            <div class="text-left">Ciabatta</div>
+            <div class="price">€9.00</div>
+          </div>
+          <div class="item-row">
+            <div class="text-left">Ham Ciabatta</div>
+            <div class="price">€10.00</div>
+          </div>
+          <div class="item-row description">Ham, mozzarella & sundried tomatoes.</div>
+          <div class="item-row">
+            <div class="text-left">Tuna Ciabatta</div>
+            <div class="price">€10.00</div>
+          </div>
+          <div class="item-row description">Tuna, onion, mozzarella, & sundried tomatoes.</div>
+          <div class="item-row">
+            <div class="text-left">Mixed Veg Ciabatta</div>
+            <div class="price">€10.00</div>
+          </div>
+          <div class="item-row description">Artichokes, mushroom, onion, mozzarella & sundried tomatoes.</div>
+          <div class="item-row">
+            <div class="text-left">Pizza Ciabatta</div>
+            <div class="price">€11.00</div>
+          </div>
+          <div class="item-row description">Pizza sauce, mozzarella & pepperoni (more toppings available).</div>
+        </div>
+      </section>
     <footer>
         <P class="footer">Royal Parade,<br> Killaloe,<br> Co.Clare</P>
         <ul id="social-networks">
